# gcd-verilog

./: CMakeLists.txt  Makefile  README.md  gcd_calc.v  testbench.v
